--- a/style.scss
+++ b/style.scss
@@ -10,3 +10,8 @@ body {
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
+
+main {
+  width: 100%;
+  height: 100%;
+}
