--- a/style.scss
+++ b/style.scss
@@ -9,9 +9,43 @@ body {
   font-size: 62.5%;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  background-image: url(/img/nature-3091991_1280.jpg);
+  background-size: cover;
+  position: relative;
+  overflow: hidden;
 }
 
 main {
   width: 100%;
   height: 100%;
+}
+
+.image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  &__wrapper {
+    height: 80%;
+    position: absolute;
+    bottom: 0%;
+    right: 0%;
+    animation: goup 1s ease-in-out;
+  }
+}
+
+@keyframes goup {
+  0% {
+    transform: translateY(100%);
+  }
+  100% {
+    transform: translateY(0%);
+  }
+}
+
+.text {
+  color: white;
+  font-size: 3rem;
+  text-transform: uppercase;
+  text-shadow: 0.5rem 0.5rem 0.5rem rgb(53, 53, 53);
+  padding: 10% 20%;
 }
