--- a/style.scss
+++ b/style.scss
@@ -9,15 +9,25 @@ body {
   font-size: 62.5%;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-  background-image: url(/img/nature-3091991_1280.jpg);
-  background-size: cover;
   position: relative;
   overflow: hidden;
+  animation: fadeIn 1s ease-in-out;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 main {
   width: 100%;
   height: 100%;
+  background-image: url(/img/nature-3091991_1280.jpg);
+  background-size: cover;
 }
 
 .image {
@@ -27,18 +37,22 @@ main {
   &__wrapper {
     height: 80%;
     position: absolute;
-    bottom: 0%;
+    bottom: -100%;
     right: 0%;
-    animation: goup 1s ease-in-out;
+    animation: goUp 3s ease-in-out forwards;
   }
 }
 
-@keyframes goup {
+@keyframes goUp {
   0% {
-    transform: translateY(100%);
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+    bottom: 0;
   }
   100% {
-    transform: translateY(0%);
+    bottom: 0;
   }
 }
 
@@ -47,5 +61,55 @@ main {
   font-size: 3rem;
   text-transform: uppercase;
   text-shadow: 0.5rem 0.5rem 0.5rem rgb(53, 53, 53);
-  padding: 10% 20%;
+  &__date {
+    position: absolute;
+    top: 25%;
+    left: 20%;
+  }
+  &__title {
+    position: absolute;
+    top: 10rem;
+    left: 20rem;
+  }
+}
+
+.text__title span {
+  display: inline-block;
+  opacity: 0;
+  animation: rotateTitle 2s linear forwards;
+}
+
+.text__title span:nth-child(1) {
+  animation-delay: 1.2s;
+}
+.text__title span:nth-child(2) {
+  animation-delay: 1.4s;
+}
+.text__title span:nth-child(3) {
+  animation-delay: 1.6s;
+}
+.text__title span:nth-child(4) {
+  animation-delay: 1.8s;
+}
+.text__title span:nth-child(5) {
+  animation-delay: 2s;
+}
+.text__title span:nth-child(6) {
+  animation-delay: 2.2s;
+}
+.text__title span:nth-child(7) {
+  animation-delay: 2.4s;
+}
+.text__title span:nth-child(8) {
+  animation-delay: 2.6s;
+}
+
+@keyframes rotateTitle {
+  from {
+    transform: rotateY(90deg);
+  }
+  to {
+    transform: rotateY(0);
+    opacity: 1;
+  }
 }
