--- a/style.scss
+++ b/style.scss
@@ -62,9 +62,18 @@ main {
   text-transform: uppercase;
   text-shadow: 0.5rem 0.5rem 0.5rem rgb(53, 53, 53);
   &__date {
+    width: 30rem;
+    height: 10rem;
     position: absolute;
-    top: 25%;
-    left: 20%;
+    top: 16rem;
+    left: 20rem;
+    overflow: hidden;
+  }
+  &__date::before {
+    content: "18/10/2021";
+    position: absolute;
+    opacity: 0;
+    animation: showDate 1.5s ease-in-out 2.3s forwards;
   }
   &__title {
     position: absolute;
@@ -110,6 +119,19 @@ main {
   }
   to {
     transform: rotateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes showDate {
+  0% {
+    transform: translateY(-120%);
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(0);
     opacity: 1;
   }
 }
